<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.5</version>
    </parent>
    <groupId>org.zj2.lite</groupId>
    <artifactId>zj2-lite</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>zj2-lite-data</module>
        <module>zj2-lite-util</module>
        <module>zj2-lite-service</module>
        <module>zj2-lite-service-api</module>
        <module>zj2-lite-session</module>
        <module>zj2-lite-test</module>
        <module>zj2-lite-service-starter</module>
        <module>zj2-lite-net</module>
        <module>zj2-lite-async-task</module>
        <module>zj2-modules</module>
    </modules>
    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <!--        -->
        <lombok.version>1.18.20</lombok.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-text.version>1.10.0</commons-text.version>
        <snakeyaml.version>1.33</snakeyaml.version>
        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
        <mybatis-plus-dynamic-datasource.version>3.5.2</mybatis-plus-dynamic-datasource.version>
        <pagehelper-boot.version>1.4.5</pagehelper-boot.version>
        <guava.version>30.1.1-jre</guava.version>
        <fastjson.version>1.2.83</fastjson.version>
        <rocketMq.version>2.2.2</rocketMq.version>
        <skywalking.version>8.13.0</skywalking.version>
        <springfox.version>3.0.0</springfox.version>
        <swagger.version>1.5.20</swagger.version>
        <jwt.version>4.2.1</jwt.version>
        <dubbo.version>3.1.3</dubbo.version>
        <janino.version>3.1.9</janino.version>
        <bouncycastle.version>1.72</bouncycastle.version>
        <htmlunit.version>2.70.0</htmlunit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.zj2.lite</groupId>
                <artifactId>zj2-lite-data</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite</groupId>
                <artifactId>zj2-lite-util</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite</groupId>
                <artifactId>zj2-lite-net</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite</groupId>
                <artifactId>zj2-lite-async-task</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite</groupId>
                <artifactId>zj2-lite-service</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite</groupId>
                <artifactId>zj2-lite-service-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite</groupId>
                <artifactId>zj2-lite-service-starter</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-auth-plugin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-uac-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-uac</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-uac-plugin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-uac-wx</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-wx-sdk</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-sys</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-sys-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.zj2.lite.module</groupId>
                <artifactId>zj2-common-sys-plugin</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>${commons-text.version}</version>
            </dependency>
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-annotation</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
                <version>${mybatis-plus-dynamic-datasource.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.rocketmq</groupId>
                <artifactId>rocketmq-spring-boot-starter</artifactId>
                <version>${rocketMq.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-collections</groupId>
                        <artifactId>commons-collections</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.skywalking</groupId>
                <artifactId>apm-toolkit-trace</artifactId>
                <version>${skywalking.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-boot-starter</artifactId>
                <version>${springfox.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.dubbo</groupId>
                <artifactId>dubbo-spring-boot-starter</artifactId>
                <version>${dubbo.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.dubbo</groupId>
                <artifactId>dubbo</artifactId>
                <version>${dubbo.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.janino</groupId>
                <artifactId>janino</artifactId>
                <version>${janino.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sourceforge.htmlunit</groupId>
                <artifactId>htmlunit</artifactId>
                <version>${htmlunit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>
</project>